<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.unige.idsi.y15.stayfitgeneva.DisplayMapActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/World_Topo"
            android:showAsAction="never"
            android:title="@string/TopoMenu" />
        <item
            android:id="@+id/World_Street_Map"
            android:showAsAction="never"
            android:title="@string/StreetMapMenu" />
        <item
            android:id="@+id/Hybrid"
            android:showAsAction="never"
            android:title="@string/HybridMenu" />
        <item
            android:id="@+id/Satellite"
            android:showAsAction="never"
            android:title="@string/SatelliteMenu" />
    </group>

</menu>
